base/src/test/resources/failure/tyck/unexpected-end.aya.txt
In file $FILE:7:19 ->

  5 |   }
  6 | def path {A : I -> Type} (p : Pi (i : I) -> A i)
  7 |   => new Path A (p 3) (p 4) { | at i => p i }
                         ^^

Error: Unable to check the expression
         3
       of interval type

In file $FILE:7:25 ->

  5 |   }
  6 | def path {A : I -> Type} (p : Pi (i : I) -> A i)
  7 |   => new Path A (p 3) (p 4) { | at i => p i }
                               ^^

Error: Unable to check the expression
         4
       of interval type

2 error(s), 0 warning(s).
What are you doing?
